Update key styling to overlap correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,14 @@
 
 body {
     background-color: aqua;
-    display: grid
+    display: grid;
+}
+
+.keyboard-container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-auto-flow: column;
 }
 
 /* Styling for piano white keys */
@@ -28,5 +35,6 @@ body {
     height: 240px;
     background-color: black;
     margin-left: -30px;
-
+    margin-right: -30px;
+    z-index: 2;
 }
